[package]
name = "south-common"
version = "0.2.0"
edition = "2024"

[features]
default = [ ]

g0 = [ "embedded", "embassy-stm32/stm32g0b1ke" ]
h7 = [ "embedded", "embassy-stm32/stm32h723vg" ]
alloc = [ ]

embedded = [ "embassy-stm32", "defmt", "heapless", "embedded-can" ]
serde = ["dep:serde", "dep:serde_cbor", "tmtc-system/serde", "alloc" ]

[dependencies]
tmtc-system = { version = "0.1.0", git = "ssh://git@github.com/S2outh/telemetry-system.git" }
#tmtc-system = { version = "0.1.0", path = "/home/eliseoc/WueSpace/South/tmtc-system" }

# air
embassy-stm32 = { version = "0.4.0", features = [ "defmt" ], optional = true }
defmt = { version = "1.0", optional = true }
heapless = { version = "0.9", default-features = false, optional = true }
embedded-can = { version = "0.4.1", optional = true }

# ground
serde = { version = "1.0.228", default-features = false, features = ["derive"], optional = true }
serde_cbor = { version = "0.11.2", optional = true }
